<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package>
  <name>sr_visualization</name>
  <version>1.3.1</version>
  <description>This stack contains the different gui plugins used with the shadow robot stacks.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_visualization</url>
  <url type="repository">https://github.com/shadow-robot/sr-visualization</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-visualization/issues</url>

  <author email="software@shadowrobot.com">Maintained by Ugo Cupcic </author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <run_depend>sr_gui_controller_tuner</run_depend>
  <run_depend>sr_visualization_icons</run_depend>

  <export>
    <metapackage />
  </export>
</package>
