<package>
  <name>sr_visualization_icons</name>
  <version>1.2.0</version>
  <description>Contains icons used by all guis in sr_visualization.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>
  
  <url type="website">http://ros.org/wiki/sr_gui_muscle_driver_bootloader</url>

  <author email="software@shadowrobot.com">Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

</package>
